--- a/index.html
+++ b/index.html
@@ -1,71 +1,96 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link  rel = "stylesheet"  type ="text/css" href = "css/style.css" />
-    <title>Tech and Science Fest</title>
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="index.html">TECH AND SCIENCE FEST</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">О фестивале <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="rules.html">Правила</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contacts.html">Контакты</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="sponsors.html">Спонсоры</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <div class="container">
-      <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="image/bg.jpg" class="d-block w-100" alt="...">
-          </div>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <title>Tech and Science Fest</title>
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="index.html">TECH AND SCIENCE FEST</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">О фестивале <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="rules.html">Правила</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contacts.html">Контакты</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="sponsors.html">Спонсоры</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <div class="container">
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="image/bg.jpg" class="d-block w-100" alt="...">
         </div>
-      </div>
-
-      <div class="text">
-        <h5 class="main">О фестивале "Tech and Science Fest"</h5>
-        <p class="lead">15 ноября 2019 в Кыргызстане пройдет третий Фестиваль науки и техники Tech and Science Fest.</p>
-        <p class="lead">Фестиваль предоставит возможность каждому участнику познакомиться с новыми технологиями, опробовать гаджеты и девайсы, получившие мировое признание, а также представить свои проекты. Здорово, что такие крупные компании, как «Газпром Кыргызстан» поддерживают подобные инновационные проекты и активно участвуют в их внедрении в республике.</p>
-        <p class="lead">На уникальной, технологической площадке будет представлена ярмарка работ в области электроники, программирования и 3D моделирования, аэроботы и модели ракет, искусственный интеллект, контроллеры диабета, виртуальные игры по обучению безопасности на дорогах, мобильные приложения, образовательные порталы, курсы программирования и робототехники, системы «умный дом» и многое другое.</p>
-        <p class="lead">Эффективное и устойчивое развитие газового сектора зависит от внедрения инноваций и новых технологий, и конечно, данное направление в компании является приоритетным. Проведение подобных мероприятий способствует развитию науки и технологий в Кыргызстане, и мы не могли не поддержать столь важную инициативу.</p>
-        <p class="lead">Все участники фестиваля смогут прослушать мастер-классы от опытных программистов, разработчиков, международных экспертов, которые поделятся своим опытом в области кибер-безопасности, информационных технологий, программирования и робототехники.</p>
-        <p class="lead">Основной целью данного мероприятия является проинформировать, развлечь, подключить и развить сообщество через успешные примеры инноваций. Фестиваль станет ярким примером демонстрации науки в действии, позволит вдохновиться инновациями и обучиться.</p>
-        <p class="lead">Фестиваль-ярмарка станет действенным шагом для развития STEM направления в стране. Востребованное во всем мире направление STEM (наука, технологии, инженерия и математика) поможет внедрить инновации и создать новые технологии в Кыргызстане.</p>
-        <p class="lead">Станьте частью инновационного технологического движения!</p>
       </div>
     </div>
 
-    <footer class="mastfoot mt-auto">
-      <div class="inner">
-        <p>&copy; 2019 Tech and Science Fest</p>
-      </div>
-    </footer>
+    <div class="text">
+      <h5 class="main">О фестивале "Tech and Science Fest"</h5>
+      <p class="lead">15 ноября 2019 в Кыргызстане пройдет третий Фестиваль науки и техники Tech and Science Fest.</p>
+      <p class="lead">Фестиваль предоставит возможность каждому участнику познакомиться с новыми технологиями,
+        опробовать гаджеты и девайсы, получившие мировое признание, а также представить свои проекты. Здорово, что такие
+        крупные компании, как «Газпром Кыргызстан» поддерживают подобные инновационные проекты и активно участвуют в их
+        внедрении в республике.</p>
+      <p class="lead">На уникальной, технологической площадке будет представлена ярмарка работ в области электроники,
+        программирования и 3D моделирования, аэроботы и модели ракет, искусственный интеллект, контроллеры диабета,
+        виртуальные игры по обучению безопасности на дорогах, мобильные приложения, образовательные порталы, курсы
+        программирования и робототехники, системы «умный дом» и многое другое.</p>
+      <p class="lead">Эффективное и устойчивое развитие газового сектора зависит от внедрения инноваций и новых
+        технологий, и конечно, данное направление в компании является приоритетным. Проведение подобных мероприятий
+        способствует развитию науки и технологий в Кыргызстане, и мы не могли не поддержать столь важную инициативу.</p>
+      <p class="lead">Все участники фестиваля смогут прослушать мастер-классы от опытных программистов, разработчиков,
+        международных экспертов, которые поделятся своим опытом в области кибер-безопасности, информационных технологий,
+        программирования и робототехники.</p>
+      <p class="lead">Основной целью данного мероприятия является проинформировать, развлечь, подключить и развить
+        сообщество через успешные примеры инноваций. Фестиваль станет ярким примером демонстрации науки в действии,
+        позволит вдохновиться инновациями и обучиться.</p>
+      <p class="lead">Фестиваль-ярмарка станет действенным шагом для развития STEM направления в стране. Востребованное
+        во всем мире направление STEM (наука, технологии, инженерия и математика) поможет внедрить инновации и создать
+        новые технологии в Кыргызстане.</p>
+      <p class="lead">Станьте частью инновационного технологического движения!</p>
+    </div>
+  </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+  <footer class="mastfoot mt-auto">
+    <div class="inner">
+      <p>&copy; 2019 Tech and Science Fest</p>
+    </div>
+  </footer>
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
