--- a/contacts.html
+++ b/contacts.html
@@ -1,68 +1,92 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link  rel = "stylesheet"  type ="text/css" href = "css/style.css" />
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Contacts</title>
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="index.html">TECH AND SCIENCE FEST</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">О фестивале <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="rules.html">Правила</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="contacts.html">Контакты</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="sponsors.html">Спонсоры</a>
-          </li>
-        </ul>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="css/style.css" />
+
+  <title>Contacts</title>
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="index.html">TECH AND SCIENCE FEST</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+      aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">О фестивале <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="rules.html">Правила</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="contacts.html">Контакты</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="sponsors.html">Спонсоры</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+  <div class="container">
+    <div>
+      <img src="image/contact.jpeg" class="img-fluid rounded">
+    </div>
+    <div class="row">
+      <div class="col">
+          <iframe      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2026.7492827760793!2d74.60135186868543!3d42.8403116090939!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x389eb618921598d7%3A0xea43bfa802477f7e!2z0JrRi9GA0LPRi9C30YHQutC40Lkg0LPQvtGB0YPQtNCw0YDRgdGC0LLQtdC90L3Ri9C5INGD0L3QuNCy0LXRgNGB0LjRgtC10YIg0YHRgtGA0L7QuNGC0LXQu9GM0YHRgtCy0LAsINGC0YDQsNC90YHQv9C-0YDRgtCwINC4INCw0YDRhdC40YLQtdC60YLRg9GA0Ys!5e1!3m2!1sru!2skg!4v1568912867899!5m2!1sru!2skg"
+            width="400" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
       </div>
-    </nav>
 
-    <div class="container">
-    	<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-		    <div class="carousel-inner">
-			    <div class="carousel-item active">
-	  			  <img src="image/contact.jpeg" class="d-block w-100" alt="...">
-          </div>
-        </div>
+      <div class="text text-center">
+        <h2>Контакты</h2>
+        <br>Адрес: 
+        <br>г.Бишкек, ул.Малдыбаева, КГУСТА
+        <br>
+        <br>Тел: 
+        <br>+996 700 00 00 00
+        <br>
+        <br>E-mail: 
+        <br>example@blabla.bla
+        <br>
       </div>
-
-      <div class="text">
-        <h5 class="main">Контакты</h5>
-        <p class="lead">Адрес: г.Бишкек, ул.Малдыбаева, КГУСТА</p>
-        <p class="lead">Контактные телефоны:</p>
-        <p class="lead">Тел: +996 700 00 00 00</p>
-        <p class="lead">E-mail: engineernumber1@gmail.com</p>
+      <div class="col text text-center">
+        <br><br>
+        <h2>Отправьте письмо</h2>
+        <br><br>
+        <a href="#" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Google sForm</a>
       </div>
     </div>
+  </div>
 
-    <footer class="mastfoot mt-auto">
-      <div class="inner">
-        <p>&copy; 2019 Tech and Science Fest</p>
-        </div>
-    </footer>
+  <footer class="mastfoot mt-mr-auto">
+    <div class="inner">
+      <p>&copy; 2019 Tech and Science Fest</p>
+    </div>
+  </footer>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
