--- a/sponsors.html
+++ b/sponsors.html
@@ -1,70 +1,83 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link  rel = "stylesheet"  type ="text/css" href = "css/style.css" />
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Спонсоры</title>
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="index.html">TECH AND SCIENCE FEST</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="index.html">О фестивале <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="rules.html">Правила</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="contacts.html">Контакты</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="sponsors.html">Спонсоры</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="css/style.css" />
 
-<div class="container">
-	<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-		<div class="carousel-inner">
-			<div class="carousel-item active">
-				<img src="image/sponsors.png" class="d-block w-100" alt="...">
-			</div>
-		</div>
-	</div>
+  <title>Спонсоры</title>
+</head>
 
-<div class="text">
-	<h5 class="main">Спонсоры фестиваля Tech and Science Fest</h5>
-	<p class="lead">Спонсором данного фестиваля является букмекерская компания 1XBET. 1XBET - высокие коэффициенты, большие выигрыши и быстрая оплата. 1XBET - надежная букмекерская компания. Переходите по ссылке внизу и зарегистрируйтесь по нашему промокоду и получите 600 рублей бонуса.</p>
-	<p class="lead">Ссылка: https://1xbet.com/</p>
-	<p class="lead">Промокод: Engineers</p>
-	<p class="lead">Если хотите так же стать спонсором данного мероприятия свяжитесь с нами:</p>
-        <p class="lead">Тел:+996 702 919 182</p>
-        <p class="lead">E-mail: engineernumber1@gmail.com</p>
-</div>
-</div>
-
-<footer class="mastfoot mt-auto">
-	<div class="inner">
-		<p>&copy; 2019 Tech and Science Fest</p>
+<body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="index.html">TECH AND SCIENCE FEST</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+      aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">О фестивале <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="rules.html">Правила</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contacts.html">Контакты</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="sponsors.html">Спонсоры</a>
+        </li>
+      </ul>
     </div>
-</footer>
+  </nav>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+  <div class="container">
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="image/sponsors.png" class="d-block w-100" alt="...">
+        </div>
+      </div>
+    </div>
+
+    <div class="text">
+      <h5 class="main">Спонсоры фестиваля Tech and Science Fest</h5>
+      <p class="lead">Спонсором данного фестиваля является букмекерская компания 1XBET. 1XBET - высокие коэффициенты,
+        большие выигрыши и быстрая оплата. 1XBET - надежная букмекерская компания. Переходите по ссылке внизу и
+        зарегистрируйтесь по нашему промокоду и получите 600 рублей бонуса.</p>
+      <p class="lead">Ссылка: https://1xbet.com/</p>
+      <p class="lead">Промокод: Engineers</p>
+      <p class="lead">Если хотите так же стать спонсором данного мероприятия свяжитесь с нами:</p>
+      <p class="lead">Тел:+996 702 919 182</p>
+      <p class="lead">E-mail: engineernumber1@gmail.com</p>
+    </div>
+  </div>
+  
+  <footer class="mastfoot mt-auto">
+    <div class="inner">
+      <p>&copy; 2019 Tech and Science Fest</p>
+    </div>
+  </footer>
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
