--- a/contacts.html
+++ b/contacts.html
@@ -41,31 +41,35 @@
 
   <div class="container">
     <div>
-      <img src="image/contact.jpeg" class="img-fluid rounded">
+      <img src="image/contact.jpeg" class="img-fluid">
     </div>
-    <div class="row">
-      <div class="col">
-          <iframe      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2026.7492827760793!2d74.60135186868543!3d42.8403116090939!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x389eb618921598d7%3A0xea43bfa802477f7e!2z0JrRi9GA0LPRi9C30YHQutC40Lkg0LPQvtGB0YPQtNCw0YDRgdGC0LLQtdC90L3Ri9C5INGD0L3QuNCy0LXRgNGB0LjRgtC10YIg0YHRgtGA0L7QuNGC0LXQu9GM0YHRgtCy0LAsINGC0YDQsNC90YHQv9C-0YDRgtCwINC4INCw0YDRhdC40YLQtdC60YLRg9GA0Ys!5e1!3m2!1sru!2skg!4v1568912867899!5m2!1sru!2skg"
-            width="400" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-      </div>
 
-      <div class="text text-center">
+    <div class="row p-2">
+      <div class="col text-center text bg-dark ml-2">
         <h2>Контакты</h2>
-        <br>Адрес: 
+        <br>Адрес:
         <br>г.Бишкек, ул.Малдыбаева, КГУСТА
         <br>
-        <br>Тел: 
+        <br>Тел:
         <br>+996 700 00 00 00
         <br>
-        <br>E-mail: 
+        <br>Э-почта:
         <br>example@blabla.bla
         <br>
       </div>
-      <div class="col text text-center">
+      
+      <div class="col col-center mt-1">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2026.7492827760793!2d74.60135186868543!3d42.8403116090939!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x389eb618921598d7%3A0xea43bfa802477f7e!2z0JrRi9GA0LPRi9C30YHQutC40Lkg0LPQvtGB0YPQtNCw0YDRgdGC0LLQtdC90L3Ri9C5INGD0L3QuNCy0LXRgNGB0LjRgtC10YIg0YHRgtGA0L7QuNGC0LXQu9GM0YHRgtCy0LAsINGC0YDQsNC90YHQv9C-0YDRgtCwINC4INCw0YDRhdC40YLQtdC60YLRg9GA0Ys!5e1!3m2!1sru!2skg!4v1568912867899!5m2!1sru!2skg"
+          width="400" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+      </div>
+
+      <div class="col text text-center bg-dark mr-2">
+        <h3>Отправьте письмо</h3>
+        <br>
+        <a href="#" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Google Form</a>
         <br><br>
-        <h2>Отправьте письмо</h2>
-        <br><br>
-        <a href="#" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Google sForm</a>
+        <h3>Свежись с нами</h3>
       </div>
     </div>
   </div>
