--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                 </div>
                 <div class="col-md-3 col-sm-4 col-xs-6">
                     <a href="https://zensoft.io" class="sponsor">
-                        <img src="https://zensoft.io/static/img/prev.png" alt="">
+                        <img src="https://assets.website-files.com/5d9d911512f8e20bd213137b/5d9d911512f8e21eb1131381_zensoft%20logo.svg" alt="">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-4 col-xs-6">
